--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,11 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 2px;
 }
 
 .header {
   margin-bottom: 150px;
+  margin-top: 1px;
   text-shadow: 0 2px 4px rgba(197, 26, 26, 0.541);
 }
