--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -2,15 +2,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px 20px;
+
   border: none;
-  border-radius: 4px;
+  border-radius: 8px;
   background-color: #007bff;
   color: white;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.7s ease;
-  margin-bottom: 100px;
+
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -57,4 +57,34 @@
 .success:disabled {
   background-color: #cccccc;
   cursor: not-allowed;
+}
+
+/* Sizes */
+.small {
+  padding: 5px 10px;
+  font-size: 14px;
+}
+
+.medium {
+  padding: 5px 10px;
+  font-size: 16px;
+}
+
+.large {
+  padding: 5px 30px;
+  font-size: 18px;
+}
+
+/* Outline */
+.outline {
+  background-color: transparent;
+  border: 1px solid currentColor;
+}
+
+/* Block */
+.block {
+  display: block;
+  width: 50%;
+  margin-top: 1px;
+  margin-bottom: 100px;
 }
