breytti stíl til að geta deployað betur

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 1024px;
+  min-height: 768px;
 }
 
 .container {
