--- a/src/App.css
+++ b/src/App.css
@@ -6,18 +6,15 @@ html {
   width: 100%;
   background-color: #ffc250;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  min-width: 1024px;
-  min-height: 768px;
+  flex-direction: column;
 }
 
 .container {
+  padding: 2px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-items: center;
   align-items: center;
-  padding: 2px;
 }
 
 .header {
